--- a/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Product/Upsert.cshtml
@@ -11,7 +11,7 @@
     <div class="card-body p-4">
         <form method="post" class="row" enctype="multipart/form-data">
             <input asp-for="Product.ProductId" hidden />
-           
+           <input asp-for="Product.ImageUrl" hidden />
             <div class="row">
                 <div class="col-10">
                     <div class="border p-3">
@@ -67,7 +67,7 @@
                             <span asp-validation-for="Product.CategoryIdFK" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input type="file" name="files" class="form-control border-0 shadow" multiple />
+                            <input type="file" name="file" class="form-control border-0 shadow" multiple />
                             <label asp-for="Product.ImageUrl" class="ms-2"></label>
                         </div>
                         <div class="row pt-2">
@@ -87,7 +87,11 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-2">
+                            <img src="@Model.Product.ImageUrl" width="100%"
+                                style="border-radius:5px; border:1px solid #bbb9b9" /> 
 
+                        </div>
 
                     </div>
                 </div>
@@ -98,6 +102,13 @@
     </div>
 </div>
 @section Scripts {
+    <script>
+        tinymce.init({
+            selector: 'textarea',
+            plugins: 'anchor autolink charmap codesample emoticons lists wordcount',
+            toolbar: 'undo redo | blocks fontfamily fontsize | bold italic underline strikethrough | align lineheight | tinycomments | checklist numlist bullist indent outdent',
+        });
+    </script>
     @{
         <partial name="_ValidationScriptsPartial" />
 
